@@ -2,6 +2,7 @@ import java.io.IOException;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class Ex2 {
     /*
@@ -9,16 +10,15 @@ public class Ex2 {
     File, cree un directorio (con toda la ruta) y un archivo vacío dentro de ese directorio.
      */
     public static void main(String[] args) {
-        String directory = "/home/stx/Desktop/Cositas";
-        Path dirPath = Path.of(directory);
+        Path dirPath = Paths.get("C:\\Users\\quinb\\Desktop");
 
         try {
             Files.createDirectories(dirPath);
-            String fileName = "file.txt";
-            Path filePath = Path.of(directory, fileName);
+            String file = "cosa.txt";
 
+            Path filePath = Path.of(dirPath.toString(), file);
             Files.createFile(filePath);
-            System.out.println("File created: " + fileName);
+            System.out.println("File created: " + file);
 
         } catch (FileAlreadyExistsException e) {
             System.out.println("File already exists: " + e.getMessage());
